2004-06-07  Chad Fowler  <chad@chadfowler.com>
	* Fixed bug caused by method change on Version::Requirement

2004-06-08  Rich Kilmer <rich@infoether.com>
        * fixed bug in doc_manager.rb whereby the extra_rdoc_files should
          be appended to the list of directories prior to prepending the
          full path.

2004-06-08  Gavin Sinclair <gsinclair@soyabean.com.au>
	* bin/gem_server: List installed gems in [name,version] order.

2004-06-08  Gavin Sinclair <gsinclair@soyabean.com.au>
	* lib/rubygems/installer.rb: don't warn about not being able to
	  install a library stub if a library stub is already installed.
	  Still warn if it's not a library stub that's there already.

2004-06-08  Gavin Sinclair <gsinclair@soyabean.com.au>
	* bin/gem: renamed --upgrade-dist to --upgrade--all and fixed bug.
	* lib/rubygems/installer.rb: fixed bug with Ruby version assertion.

2004-06-07  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/remote_installer.rb, lib/rubygems/version.rb: Fixed old
	  dependency on #version method for Gem::Version::Requirement
	* bin/gem: new --upgrade-dist option allows one to upgrade every
	  installed gem
	* lib/rubygems/specification.rb,lib/rubygems/installer.rb: new
	  #required_ruby_version attribute added to gem specification for specifying a
	  dependency on which version of ruby the gem needs.	Format it accepts is
	  the same as the Gem::Version::Requirement format.

2004-06-06  Chad Fowler  <chad@chadfowler.com>
	* bin/gem: install_stub is once again the default due to requests.

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb, lib/rubygems/doc_manager.rb:  
	Allow arbitrary files to be added for rdoc to run over them (as per
	Jim's request).

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* bin/gem:  Reformatted --search and --list output such that
	multiple versions of a gem are compressed into a single entry
	(with version numbers in parentheses)

2004-05-31  Jim Weirich  <jweirich@one.net>
